# atlas

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  404.html  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE-3RD-PARTY  README.md  appveyor.yml  download-obj.sh  index.html  mkdocs.yml  sitemap.xml
examples/hello_shader/: CMakeLists.txt  ShaderPaths.hpp.in  UniformLocations.glsl  main.cpp  triangle.fs.glsl  triangle.vs.glsl
examples/hello_triangle/: CMakeLists.txt  main.cpp
include/atlas/: Application.hpp  Atlas.hpp  Atlas.hpp.in  CMakeLists.txt  Constants.hpp  Film.hpp  Float.hpp  GLError.hpp  GLHeader.hpp  GLImage.hpp  GLShader.hpp  Geometry.hpp  Log.hpp  Macros.hpp  Math.hpp  Matrix.hpp  Platform.hpp  RGBColour.hpp  Ray.hpp  Scene.hpp  ShadeRec.hpp  Solvers.hpp  Texture.hpp  Time.hpp  Timer.hpp  Vector.hpp
include/atlas/core/: Application.hpp  Assert.hpp  CMakeLists.txt  Constants.hpp  Core.hpp  Enum.hpp  Exception.hpp  FMT.hpp  Filesystem.hpp  Float.hpp  Functional.hpp  GLFW.hpp  GLI.hpp  GLM.hpp  ImGUI.hpp  Log.hpp  Macros.hpp  Numeric.hpp  Platform.hpp  Queue.hpp  STB.hpp  STBImage.hpp  Scene.hpp  ThreadPool.hpp  Time.hpp  Timer.hpp  TinyObjLoader.hpp  WinDebug.hpp
include/atlas/gl/: Buffer.hpp  CMakeLists.txt  ErrorCheck.hpp  FrameBuffer.hpp  GL.hpp  GLShaderInfo.hpp  Mesh.hpp  RenderBuffer.hpp  Shader.hpp  ShaderUnit.hpp  Texture.hpp  VertexArrayObject.hpp
include/atlas/glex/: CMakeLists.txt
include/atlas/glx/: Buffer.hpp  CMakeLists.txt  Context.hpp  ErrorCallback.hpp  GL.hpp  GLSL.hpp
include/atlas/graph/: CMakelists.txt  Graph.hpp  Node.hpp
include/atlas/gui/: CMakeLists.txt  GUI.hpp  imconfig.h  imgui.h  imgui_internal.h  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
include/atlas/hlr/: CMakeLists.txt  Export.hpp  cr.h
include/atlas/math/: CMakeLists.txt  Coordinates.hpp  Math.hpp  Matrix.hpp  Quaternion.hpp  Random.hpp  RandomGenerator.hpp  Ray.hpp  Solvers.hpp  Vector.hpp
include/atlas/primitives/: CMakeLists.txt  Cone.hpp  Cube.hpp  Disk.hpp  Mesh.hpp  ObjMesh.hpp  OpenCylinder.hpp  Primitive.hpp  Primitives.hpp  QuadMesh.hpp  Sphere.hpp
include/atlas/tools/: CMakeLists.txt  Grid.hpp  MayaCamera.hpp  ModellingScene.hpp  Tools.hpp
include/atlas/utils/: Application.hpp  BBox.hpp  BVH.hpp  BVNode.hpp  CMakeLists.txt  Camera.hpp  FPSCounter.hpp  Film.hpp  GUI.hpp  Geometry.hpp  LoadObjFile.hpp  Mesh.hpp  ObjLoader.hpp  RGBColour.hpp  Scene.hpp  Time.hpp  Utils.hpp  WindowSettings.hpp  stb_image.h  stb_image_resize.h  stb_image_write.h
source/atlas/: Application.cpp  CMakeLists.txt  Film.cpp  GLShader.cpp  Geometry.cpp  Log.cpp  Ray.cpp  Scene.cpp  Texture.cpp
source/atlas/core/: Application.cpp  Assert.cpp  CMakeLists.txt  Log.cpp  STBImage.cpp  Scene.cpp  TinyObjLoader.cpp
source/atlas/gl/: Buffer.cpp  CMakeLists.txt  ErrorCheck.cpp  FrameBuffer.cpp  Mesh.cpp  RenderBuffer.cpp  Shader.cpp  Texture.cpp  VertexArrayObject.cpp
source/atlas/glx/: CMakeLists.txt  Context.cpp  ErrorCallback.cpp  GLSL.cpp
source/atlas/graph/: CMakelists.txt  Node.cpp
source/atlas/gui/: CMakeLists.txt  GUI.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_widgets.cpp
source/atlas/hlr/: CMakeLists.txt  LoadLibrary.cpp
source/atlas/primitives/: CMakeLists.txt  Cone.cpp  Cube.cpp  Disk.cpp  Mesh.cpp  ObjMesh.cpp  OpenCylinder.cpp  Primitive.cpp  QuadMesh.cpp  Sphere.cpp
source/atlas/tools/: CMakeLists.txt  Grid.cpp  MayaCamera.cpp  ModellingScene.cpp
source/atlas/utils/: Application.cpp  BBox.cpp  CMakeLists.txt  Camera.cpp  Cameras.cpp  FPSCounter.cpp  Film.cpp  GUI.cpp  Geometry.cpp  LoadObjFile.cpp  Mesh.cpp  ObjLoader.cpp  Scene.cpp  WindowSettings.cpp  stb_image.cpp  stb_image_resize.cpp  stb_image_write.cpp
src/: CMakeLists.txt  atlas.cpp  atlas.hpp.in
src/atlas/core/: CMakeLists.txt  Filesystem.hpp  Float.hpp  Functional.hpp  Timer.hpp
src/atlas/glx/: Buffer.hpp  CMakeLists.txt  Context.cpp  Context.hpp  ErrorCallback.cpp  ErrorCallback.hpp  GLSL.cpp  GLSL.hpp  assert.cpp  context.cpp  context.hpp  error_callback.cpp  error_callback.hpp  glsl.cpp  glsl.hpp
src/atlas/gui/: CMakeLists.txt  GUI.cpp  GUI.hpp  gui.cpp  gui.hpp
src/atlas/hlr/: CMakeLists.txt  Export.hpp  LoadLibrary.cpp  LoadLibrary.hpp  export.hpp  load_library.cpp
src/atlas/math/: CMakeLists.txt  Coordinates.hpp  Math.hpp  Random.hpp  Ray.hpp  Solvers.hpp  coordinates.hpp  glm.hpp  random.hpp  ray.hpp  solvers.hpp
src/atlas/utils/: CMakeLists.txt  Cameras.cpp  Cameras.hpp  LoadObjFile.cpp  LoadObjFile.hpp  cameras.cpp  cameras.hpp  load_obj_file.cpp  load_obj_file.hpp  tinyobjloader.cpp
test/: CMakeLists.txt  TestDataPaths.hpp.in  TestExpectedPaths.hpp.in  TestLibraryReleasePath.hpp.in  atlas_core_enum.cpp  atlas_core_float.cpp  atlas_core_functional.cpp  atlas_core_platform.cpp  atlas_core_timer.cpp  atlas_gl_gl.cpp  atlas_glex_gl.cpp  atlas_glx_context.cpp  atlas_glx_gl.cpp  atlas_glx_glsl.cpp  atlas_gui_gui.cpp  atlas_hlr_loadlibrary.cpp  atlas_math_coordinates.cpp  atlas_math_random.cpp  atlas_math_ray.cpp  atlas_math_solvers.cpp  atlas_utils_loadobj.cpp  test_data_paths.hpp.in  test_expected_paths.hpp.in  test_lib.cpp
test/data/: UniformMatrices.glsl  circular_include_a.glsl  glx_circular_include.glsl  glx_simple_file.glsl  glx_single_include.glsl  uniform_bindings.glsl
test/expected/: CMakeLists.txt  glx_c_comments.expected  glx_header_comments.expected  glx_simple_file.expected  glx_simple_file_comments.expected  glx_single_include.expected
test/expected/glx/: CMakeLists.txt  glx_circular_include.expected  glx_multiple_includes.expected  glx_nested_include.expected  glx_simple_file.expected  glx_single_include.expected
test/glx/: CMakeLists.txt  glx_context_test.cpp  glx_glsl_test.cpp
test/gui/: CMakeLists.txt  gui_gui_test.cpp  gui_widgets_test.cpp
test/hlr/: CMakeLists.txt  hlr_load_library_test.cpp
test/math/: CMakeLists.txt  math_coordinates_test.cpp  math_random_test.cpp  math_ray_test.cpp  math_solvers_test.cpp
test/test_data/: CMakeLists.txt
test/test_data/glx/: CMakeLists.txt  circular_include_b.glsl  (+6 more)
(+50 files in other folders)
