set(ATLAS_INCLUDE_ROOT_LIST
    ${ATLAS_SOURCE_ROOT}/atlas.hpp
    )
configure_file(${ATLAS_SOURCE_ROOT}/atlas.hpp.in ${ATLAS_INCLUDE_ROOT_LIST})

set(ATLAS_SOURCE_ROOT_LIST
    ${ATLAS_SOURCE_ROOT}/atlas.cpp
    )

# Add lower directories
add_subdirectory(${ATLAS_SOURCE_ROOT}/atlas/glx)
add_subdirectory(${ATLAS_SOURCE_ROOT}/atlas/gui)
add_subdirectory(${ATLAS_SOURCE_ROOT}/atlas/hlr)
add_subdirectory(${ATLAS_SOURCE_ROOT}/atlas/math)
add_subdirectory(${ATLAS_SOURCE_ROOT}/atlas/utils)

# Wrap each list for the source groups above.
set(ATLAS_INCLUDE_ROOT_GROUP ${ATLAS_INCLUDE_ROOT_LIST} PARENT_SCOPE)
set(ATLAS_INCLUDE_GLX_GROUP ${ATLAS_INCLUDE_GLX_LIST} PARENT_SCOPE)
set(ATLAS_INCLUDE_GUI_GROUP ${ATLAS_INCLUDE_GUI_LIST} PARENT_SCOPE)
set(ATLAS_INCLUDE_HLR_GROUP ${ATLAS_INCLUDE_HLR_LIST} PARENT_SCOPE)
set(ATLAS_INCLUDE_MATH_GROUP ${ATLAS_INCLUDE_MATH_LIST} PARENT_SCOPE)
set(ATLAS_INCLUDE_UTILS_GROUP ${ATLAS_INCLUDE_UTILS_LIST} PARENT_SCOPE)

set(ATLAS_SOURCE_ROOT_GROUP ${ATLAS_SOURCE_ROOT_LIST} PARENT_SCOPE)
set(ATLAS_SOURCE_GLX_GROUP ${ATLAS_SOURCE_GLX_LIST} PARENT_SCOPE)
set(ATLAS_SOURCE_GUI_GROUP ${ATLAS_SOURCE_GUI_LIST} PARENT_SCOPE)
set(ATLAS_SOURCE_HLR_GROUP ${ATLAS_SOURCE_HLR_LIST} PARENT_SCOPE)
set(ATLAS_SOURCE_UTILS_GROUP ${ATLAS_SOURCE_UTILS_LIST} PARENT_SCOPE)

# Now compile the full list of files so we can format everything at once.
set(ATLAS_HEADER_FILES
    ${ATLAS_INCLUDE_ROOT_LIST}
    ${ATLAS_INCLUDE_GLX_LIST}
    ${ATLAS_INCLUDE_GUI_LIST}
    ${ATLAS_INCLUDE_HLR_LIST}
    ${ATLAS_INCLUDE_MATH_LIST}
    ${ATLAS_INCLUDE_UTILS_LIST}
    PARENT_SCOPE)

set(ATLAS_SOURCE_FILES
    ${ATLAS_SOURCE_ROOT_LIST}
    ${ATLAS_SOURCE_GLX_LIST}
    ${ATLAS_SOURCE_GUI_LIST}
    ${ATLAS_SOURCE_HLR_LIST}
    ${ATLAS_SOURCE_UTILS_LIST}
    PARENT_SCOPE)

