set(ATLAS_INCLUDE_ROOT_LIST
    "${ATLAS_INCLUDE_ROOT}/Atlas.hpp"
    )
configure_file("${ATLAS_INCLUDE_ROOT}/Atlas.hpp.in" ${ATLAS_INCLUDE_ROOT_LIST})

# Add the lower include directories
add_subdirectory("${ATLAS_INCLUDE_ROOT}/core")
add_subdirectory("${ATLAS_INCLUDE_ROOT}/math")
add_subdirectory("${ATLAS_INCLUDE_ROOT}/glx")
add_subdirectory("${ATLAS_INCLUDE_ROOT}/gui")
add_subdirectory("${ATLAS_INCLUDE_ROOT}/hlr")
add_subdirectory("${ATLAS_INCLUDE_ROOT}/utils")

# Now wrap each variable for the source group settings.
set(ATLAS_INCLUDE_ROOT_GROUP ${ATLAS_INCLUDE_ROOT_LIST} PARENT_SCOPE)
set(ATLAS_INCLUDE_CORE_GROUP ${ATLAS_INCLUDE_CORE_LIST} PARENT_SCOPE)
set(ATLAS_INCLUDE_MATH_GROUP ${ATLAS_INCLUDE_MATH_LIST} PARENT_SCOPE)
set(ATLAS_INCLUDE_GLX_GROUP ${ATLAS_INCLUDE_GLX_LIST} PARENT_SCOPE)
set(ATLAS_INCLUDE_GUI_GROUP ${ATLAS_INCLUDE_GUI_LIST} PARENT_SCOPE)
set(ATLAS_INCLUDE_HLR_GROUP ${ATLAS_INCLUDE_HLR_LIST} PARENT_SCOPE)
set(ATLAS_INCLUDE_UTILS_GROUP ${ATLAS_INCLUDE_UTILS_LIST} PARENT_SCOPE)

set(ATLAS_HEADER_FILES
    ${ATLAS_INCLUDE_CORE_LIST}
    ${ATLAS_INCLUDE_MATH_LIST}
    ${ATLAS_INCLUDE_GLX_LIST}
    ${ATLAS_INCLUDE_GUI_LIST}
    ${ATLAS_INCLUDE_HLR_LIST}
    ${ATLAS_INCLUDE_UTILS_LIST}
    PARENT_SCOPE)
